[package]
name = "rust_rest_api_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.7.0"
reqwest = { version = "0.12.4", features = ["json","blocking"] }
serde = {version ="1.0.203", features = ["derive"]}
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"]}
